--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -18,7 +18,7 @@
          <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
   </div>
 </footer> -->
-
+<!--
 <form class="search-product-form">
     <label>Check out our cool products</label>
     <p class="input-group">
@@ -36,8 +36,8 @@
       <h1 class="page-header">Categories</h1>
      <div ng-repeat='categorie in categories'>
        <a href="/categorie.name"></a> {{categorie.name}}
-     </div>
-    </div>
+     </div> -->
+  <!--   </div>
   </div> <form class="thing-form">
     <label>Syncs in realtime across clients</label>
     <p class="input-group">
@@ -47,9 +47,9 @@
       </span>
     </p>
   </form>
-</div>
+</div> -->
 
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="container">
       <p>Angular Fullstack v2.0.13 |
         <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
@@ -57,7 +57,7 @@
   </div>
 </footer> -->
 
-<form class="search-product-form">
+<!-- <form class="search-product-form">
     <label>Check out our cool products</label>
     <p class="input-group">
       <input type="text" class="form-control" placeholder="search" ng-model="products.name">
@@ -68,12 +68,71 @@
   </form>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Categories</h1>
-     <div ng-repeat='categorie in categories'>
-       <a href="/categorie.name"></a> {{categorie.name}}
-     </div>
-    </div>
-  </div>
+ -->
+
+      <!-- Header -->
+    <a name="about"></a>
+    <div class="intro-header">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1>Stack Store</h1>
+                        <form class="search-product-form">
+                          <p class="input-group">
+                            <input type="text" class="form-control" placeholder="search" ng-model="products.name">
+                            <span class="input-group-btn">
+                              <button type="submit" class="btn btn-primary" ng-click="addThing()">Search</button>
+                            </span>
+                          </p>
+                        </form>
+                      </div>
+                        <h3>Your one stop shop For anything you want!</h3>
+                        <h3>Better then Amazon!</h3>
+                        <hr class="intro-divider">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <h1 class="page-header">Categories</h1>
+              <ul class='list-inline'>
+             <li ng-repeat='product in products | limitTo: 7'>
+               <h1>{{product.name}} is {{product.price}}</h1>
+               <a href="/product/{{product.id}}"><img ng-src='{{product.image}}'></a>
+             </li>
+             </ul>
+            </div>
+          </div>
+
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#about">About</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#services">Services</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
