--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,9 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/product/product.controller.js"></script>
+          <script src="app/product/product.js"></script>
+          <script src="app/products/products.service.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
