--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -74,7 +74,7 @@
     <a name="about"></a>
     <div class="intro-header">
         <div class="container">
-
+            <a class="btn btn-block btn-primary" href="/cart">see Cart</a>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
