--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -1,4 +1,6 @@
-<div class="container">
+<div ng-include="'components/navbar/navbar.html'"></div>
+
+<!-- <div class="container">
   <div class="panel panel-default">
     <div class="panel-body">
       <div class="media">
@@ -6,7 +8,7 @@
           <img class="media-object img-rounded" ng-src="{{product.image}}">
 
           <div class="text-center" ng-show="!currentUser">
-            <!-- <a class="btn btn-block btn-primary" href="#/cart/cart.id">Add to Cart</a> -->
+            <a class="btn btn-block btn-primary" href="#/cart/cart.id">Add to Cart</a>
             <button class="btn btn-block btn-primary"> </button>
           </div>
         </div>
@@ -21,4 +23,95 @@
         </div>
       </div>
     </div>
+  </div> -->
+
+  <!-- <div class= 'jumbotron'>
+  "Shopping Cart"
   </div>
+  <div class="a-row">
+    <div class='a-column'>
+      <ul>1, 2, 3
+      </ul>
+    </div>
+  </div>
+
+  
+ -->
+
+
+
+ <div class="container">
+  <div class="row">
+    <div class="col-xs-8">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <div class="panel-title">
+            <div class="row">
+              <div class="col-xs-6">
+                <h5><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
+              </div>
+              <div class="col-xs-6">
+                <button type="button" class="btn btn-primary btn-sm btn-block">
+                  <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="panel-body">
+          
+          <hr>
+          <div class="row" ng-repeat='product in products' >
+            <div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
+            </div>
+            <div class="col-xs-4">
+              <h4 class="product-name"><strong>{{product.data[0].name}}</strong></h4><h4><small>Product description</small></h4>
+            </div>
+            <div class="col-xs-6">
+              <div class="col-xs-6 text-right">
+                <h6><strong>{{product.data[$index+1].lineItems.purchasePrice}}<span class="text-muted">x</span></strong></h6>
+              </div>
+              <div class="col-xs-4">
+                <input type="text" class="form-control input-sm" value="1">
+              </div>
+              <div class="col-xs-2">
+                <button type="button" class="btn btn-link btn-xs">
+                  <span class="glyphicon glyphicon-trash"> </span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="text-center">
+              <div class="col-xs-9">
+                <h6 class="text-right">Added items?</h6>
+              </div>
+              <div class="col-xs-3">
+                <button type="button" class="btn btn-default btn-sm btn-block">
+                  Update cart
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="panel-footer">
+          <div class="row text-center">
+            <div class="col-xs-9">
+              <h4 class="text-right">Total <strong>$50.00</strong></h4>
+            </div>
+            <div class="col-xs-3">
+              <button type="button" class="btn btn-success btn-block">
+                Checkout
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+{{products}}
