got cart/main page/ product fully functional

--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  
+
  -->
 
 
@@ -59,24 +59,24 @@
           </div>
         </div>
         <div class="panel-body">
-          
+
           <hr>
           <div class="row" ng-repeat='product in products' >
-            <div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
+            <div class="col-xs-2"><img class="img-responsive" ng-src="{{product.picture[0]}}">
             </div>
             <div class="col-xs-4">
-              <h4 class="product-name"><strong>{{product.data[0].name}}</strong></h4><h4><small>Product description</small></h4>
+              <h4 class="product-name"><strong>{{product.name}}</strong></h4><h4><small>{{product.isActive}}</small></h4>
             </div>
             <div class="col-xs-6">
               <div class="col-xs-6 text-right">
-                <h6><strong>{{product.data[$index+1].lineItems.purchasePrice}}<span class="text-muted">x</span></strong></h6>
+                <h6><strong>{{product.lineItems.purchasePrice | currency}}<span class="text-muted">x</span></strong></h6>
               </div>
               <div class="col-xs-4">
-                <input type="text" class="form-control input-sm" value="1">
+                <input type="text" class="form-control input-sm" value="{{product.lineItems.quantity}}">
               </div>
               <div class="col-xs-2">
-                <button type="button" class="btn btn-link btn-xs">
-                  <span class="glyphicon glyphicon-trash"> </span>
+                <button ng-click='deleteFromCart(product)' type="button" class="btn btn-link btn-xs">
+                  <span class="glyphicon glyphicon-trash"></span>
                 </button>
               </div>
             </div>
@@ -86,11 +86,16 @@
             <div class="text-center">
               <div class="col-xs-9">
                 <h6 class="text-right">Added items?</h6>
+                  <h5 class="text-right">Tax</h5>
+                 <h5 class="text-right">Shipping Cost </h5>
               </div>
               <div class="col-xs-3">
                 <button type="button" class="btn btn-default btn-sm btn-block">
-                  Update cart
+                  Update Cart
                 </button>
+                <h5 class='text-right-center'>{{totalTax| currency}}</h5>
+                <h5 class='text-right-center'>{{totalShipping | currency}}</h5>
+
               </div>
             </div>
           </div>
@@ -98,7 +103,7 @@
         <div class="panel-footer">
           <div class="row text-center">
             <div class="col-xs-9">
-              <h4 class="text-right">Total <strong>$50.00</strong></h4>
+              <h4 class="text-right">Total <strong>{{totalCost | currency}}</strong></h4>
             </div>
             <div class="col-xs-3">
               <button type="button" class="btn btn-success btn-block">
@@ -114,4 +119,3 @@
 
 
 
-{{products}}
