--- a/client/app/product/product.html
+++ b/client/app/product/product.html
@@ -1,6 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
+
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-2 recomendations">
     <p class="lead">Recomendations</p>
     <div class="list-group">
       <a href="#" class="list-group-item active">ITEMS here</a>
@@ -15,13 +16,13 @@
             <div class="text-center" ng-show="!currentUser">
               <!-- <a class="btn btn-block btn-primary" href="/cart/cart.id">Add to Cart</a> -->
               <button ng-click='addToCart($scope.product)'class="btn btn-block btn-primary">Add To Cart</button>
-              <a class="btn btn-block btn-primary" href="/cart/cart.id">see Cart</a>
+              <a class="btn btn-block btn-primary" href="/cart">see Cart</a>
             </div>
           </div>
           <div class="media-body">
             <h2 class="media-heading">
             {{product.name}}
-            <span class="pull-right text-danger">{{product.price}}</span>
+            <span class="pull-right text-danger">${{product.price}}</span>
             </h2>
             <h5>
             Status: <span class="text-danger">{{product.isAvailable}}</span>
@@ -32,9 +33,6 @@
         </div>
       </div>
     </div>
-    <!--   <div class="alert alert-info" >
-      The next episode starts
-    </div> -->
     <div class="panel panel-default">
       <div class="panel-heading">
         <span class="glyphicon glyphicon-play"></span> Reviews
