--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -131,7 +131,7 @@
 
     <!-- <button ng-click='addToCart($scope.product)' class="btn btn-primary">Buy Now!</button> <a href="/product/{{product._id}}" class="btn btn-default">More Info</a> -->
 
-   <<!--  <button ng-click='addToCart(product)' class="btn btn-primary mainAddCart">Add to Cart!</button>
+   <!--  <button ng-click='addToCart(product)' class="btn btn-primary mainAddCart">Add to Cart!</button>
     <a href="/product/{{product._id}}" class="btn btn-default moreInfo">More Info</a> -->
 
 
