--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -26,7 +26,7 @@
 
 <button ng-click="addProduct(product)">Add Product</button>
 <div class="container">
-  <p>Add, edit or delete products.</p>
+  <p>Add, edit or delete products</p>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="product in products">
      
