added new theme for main page and fixed navbar issues

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -87,8 +87,9 @@
 <p><a class="btn btn-primary btn-large">Call to action!</a>
 </p>
 </header> -->
+
 <div class="intro-header">
-<div class="container">
+<div class="container main">
 <div class="row">
 <div class="col-lg-12">
   <div class="intro-message">
