--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/cart/cart.controller.js"></script>
           <script src="app/cart/cart.js"></script>
+          <script src="app/cartFactory/cartFactory.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/product/product.controller.js"></script>
