--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -51,7 +51,7 @@
                 <h5><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
               </div>
               <div class="col-xs-6">
-                <button type="button" class="btn btn-primary btn-sm btn-block">
+                <button type="button" class="btn btn-primary btn-sm btn-block"><a href="/client/main"></a>
                   <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
                 </button>
               </div>
