adding line items to cart

--- a/client/app/product/product.html
+++ b/client/app/product/product.html
@@ -3,6 +3,8 @@
 <div class="row">
   <div class="col-md-2 recomendations">
     <p class="lead">Recomendations</p>
+    <div>is available?
+        <br><span class="text-muted" editable-select="quantity" e-name='quantity'  e-ng-options="s for s in [1, 2, 3, 4, 5]">{{quantity}}</span></div>
     <div class="list-group">
       <a href="#" class="list-group-item active">ITEMS here</a>
     </div>
