--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -37,8 +37,8 @@
 
 
 
-<div ng-show="addProductForm.$visible">Product Categories
-      <br><a href="#" editable-checklist="product.categories"  e-name='addProductFor' ng-show="addProductForm.$visible" e-ng-options="category.name for category in categories" > {{showCategories(product)}}</a></div>
+<div ng-show="addProductForm.$visible">Product Categories {{product.categories}}
+      <br><a href="#" editable-checklist="product.categories" ng-show="addProductForm.$visible" e-ng-options="category for category in categoriesArrayOfStrings" > {{showCategories(product)}}</a></div>
 
 
 
