--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,8 @@
           <script src="app/cart/cart.controller.js"></script>
           <script src="app/cart/cart.js"></script>
           <script src="app/cartFactory/cartFactory.service.js"></script>
+          <script src="app/checkout/checkout.controller.js"></script>
+          <script src="app/checkout/checkout.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/product/product.controller.js"></script>
