we got the cart done, Faisal is very smart

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -91,7 +91,7 @@
 <div class="intro-header">
 <div class="container main">
 <div class="row">
-<div class="col-lg-12">
+<div class="damit col-lg-12">
   <div class="intro-message">
     <h1>Stack Store</h1>
     <form class="search-product-form">
