--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
+    <script type="text/javascript" src="<a href="https://js.stripe.com/v2/">https://js.stripe.com/v2/</a>"></script>
   </head>
   <body ng-app="stackstoreApp">
     <!--[if lt IE 7]>
