--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
-    <script type="text/javascript" src="<a href="https://js.stripe.com/v2/">https://js.stripe.com/v2/</a>"></script>
+   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
   </head>
   <body ng-app="stackstoreApp">
     <!--[if lt IE 7]>
@@ -64,9 +64,11 @@
       <script src="bower_components/angular-aria/angular-aria.js"></script>
       <script src="bower_components/hammerjs/hammer.js"></script>
       <script src="bower_components/angular-material/angular-material.js"></script>
+      <script src="bower_components/stripe-angular/stripe-angular.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
+    <script src="bower_components/angular-payments/angular-payments.min.js"></script>
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
