made some changes

--- a/client/app/checkout/checkout.html
+++ b/client/app/checkout/checkout.html
@@ -1,10 +1,19 @@
+<div ng-include="'components/navbar/navbar.html'"></div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
 <form action="/charge" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js"
     class="stripe-button"
     data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
-    data-image="/square-image.png"
-    data-name="Demo Site"
+    data-image="http://www.pitsimulator.com/arc100.jpg"
+    data-name="Give me your money!"
     data-description="2 widgets ($20.00)"
     data-amount="2000">
   </script>
