--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -141,7 +141,7 @@
     <p>{{product.description | limitTo: 90}}...</p>
     <p>
 
-     <md-button  ng-click='addToCart(product)' class="md-raised md-primary mainAddCart">Buy Now!</md-button>
+     <md-button  ng-click='addToCart(product)' class="md-raised md-primary mainAddCart">Add to Cart!</md-button>
     <a href="/product/{{product._id}}" class=" moreInfo btn btn-default">More Info</a>
 
     </p>
