adding reviews in progress

--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -37,7 +37,7 @@
 
 
 
-<div ng-show="addProductForm.$visible">Product Categories {{product.categories}}
+<div ng-show="addProductForm.$visible">Product Categories
       <br><a href="#" editable-checklist="product.categories" ng-show="addProductForm.$visible" e-ng-options="category for category in categoriesArrayOfStrings" > {{showCategories(product)}}</a></div>
 
 
