seed review in progress

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -104,8 +104,8 @@
       </p>
     </form>
   </div>
-  <h3>Your one stop shop For anything you want!</h3>
-  <h3>Better then Amazon!</h3>
+  <h3>Your one stop shop for anything you want!</h3>
+  <h3>Better than Amazon!</h3>
   <hr class="intro-divider">
 </div>
 </div>
@@ -124,7 +124,6 @@
      <button ng-repeat="category in categories" ng-click="matchCatWithProds(category)" class="btn btn-primary">
         {{category.name}}
      </button>
-     <div>{{cloths}}</div>
   </div>
 <h3>Latest Products</h3>
 </div>
