--- a/client/index.html
+++ b/client/index.html
@@ -87,6 +87,8 @@
           <script src="app/checkout/checkout.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/pastOrders/pastOrders.controller.js"></script>
+          <script src="app/pastOrders/pastOrders.js"></script>
           <script src="app/product/product.controller.js"></script>
           <script src="app/product/product.js"></script>
           <script src="app/products/products.service.js"></script>
