--- a/client/index.html
+++ b/client/index.html
@@ -86,6 +86,7 @@
           <script src="app/product/product.js"></script>
           <script src="app/products/products.service.js"></script>
           <script src="app/reviewFactory/reviewFactory.service.js"></script>
+          <script src="app/userFactory/userFactory.service.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
