--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -51,9 +51,10 @@
                 <h5><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
               </div>
               <div class="col-xs-6">
-                <button type="button" class="btn btn-primary btn-sm btn-block"><a href="/client/main"></a>
+                <a href="/"><button type="button" class="btn btn-primary btn-sm btn-block">
                   <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
                 </button>
+                </a>
               </div>
             </div>
           </div>
@@ -120,6 +121,5 @@
   </div>
 </div>
 
-{{cartLineItems}}
 
 
