--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,7 @@
       <script src="bower_components/hammerjs/hammer.js"></script>
       <script src="bower_components/angular-material/angular-material.js"></script>
       <script src="bower_components/stripe-angular/stripe-angular.js"></script>
+      <script src="bower_components/angular-payments/lib/angular-payments.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
