--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -32,25 +32,14 @@
 
 
 
-
-
-
-
-
 <div ng-show="addProductForm.$visible">Product Categories
       <br><a href="#" editable-checklist="product.categories" ng-show="addProductForm.$visible" e-ng-options="category for category in categoriesArrayOfStrings" > {{showCategories(product)}}</a></div>
 
 
 
-
-
-
-
-
-
       <form editable-form name="addProductForm" onaftersave="update(product)" >
         <div ng-show="addProductForm.$visible">Product Name</div>
-        <button type="button" ng-click="addProductForm.$show()" ng-show="!addProductForm.$visible" ng-hide="addProductForm.$visible" class="pull-right">Edit Product</button>
+        <button type="button" ng-click="addProductForm.$show()" ng-hide="addProductForm.$visible" class="pull-right">Edit Product</button>
         <strong editable-textarea="product.name" e-cols='65' e-rows='1'>{{product.name}}</strong><br>
 
         <div ng-show="addProductForm.$visible">Product Price
